# turboplex

./: .Documentacion  .gitignore  Cargo.toml  LICENSE  README.es.md  README.md  TURBOPLEX_GUIA_COMPLETA.md  TURBOPLEX_GUIDE.md  a.md  docker-compose.yml  publish.bat  pyproject.toml
.Documentacion/: ARCHITECTURE.md  CACHE_HARDENING_V0.3.4.md  DATABASE_TUNING.md  ENTERPRISE_COMPARISON.md  FLAGS_SMOKE_TESTS.md  ISOLATION_CONTRACT.md  OPERATIONS_MANUAL.md  OPTIMIZATION_CHECKLIST.md  PERFORMANCE_WHITEPAPER.md  README.md  TECHNICAL_SPECIFICATION.md  briefing_alta_fidelidad_v036.md  changelog.md  release_notes_v0.3.1_erp3.md
.one-off-scripts/: mcp_stdio_smoke.py
.trae/rules/: estructura.md
smoke_os_warm/: test_warm.py
src/: lib.rs  main.rs  test_runner.rs
src/indexer/: mod.rs
src/main/: doctor.rs  mod.rs  output.rs  part1.rs  part2.rs  pytest_compat.rs
src/main/part2/: batch.rs  cache.rs  collection.rs  mod.rs  reports.rs  runner.rs  temp.rs
src/test_runner/: cache.rs  config.rs  discovery.rs  jobs.rs  junit.rs  mod.rs  process.rs  python.rs  result.rs  shell.rs  yaml.rs
src/utils/: fs.rs  mod.rs
turboplex_py/: __init__.py  __main__.py  collector.py  db_fixtures.py  fixture_adapter.py  fixtures.py  markers.py  mcp_server.py  mcp_stdio.py  mcp_subprocess.py  plugin_adapters.py  pytest_bootstrap.py  pytest_bridge.py  pytest_integration.py  runner.py
turboplex_py/compat/: __init__.py  bootstrap.py  bridge.py  fixture_adapter.py  integration.py
turboplex_py/db/: __init__.py  fixtures.py  lazy_patcher.py
turboplex_py/mcp/: __init__.py  collect.py  config.py  errors.py  io.py  schema.py  server.py  subprocess.py  transactional.py  utils.py  win32.py
turboplex_py/runner/: __init__.py  diagnostics.py  emit.py  environment.py  execution.py  invocation.py  parametrize.py
turboplex_py/runner/adapters/: __init__.py  base.py  behave_adapter.py  unittest_adapter.py
turboplex_py/utils/: __init__.py  colors.py
