[package]
name = "turboplex"
version = "0.2.4"
edition = "2021"

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
num_cpus = "1.16"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
indicatif = { version = "0.17", features = ["rayon"] }
colored = "2.1"
chrono = "0.4"
wait-timeout = "0.2"
serde_json = "1.0"
notify = "6.1"
notify-debouncer-mini = "0.4"

[lib]
name = "turboplex"
path = "src/lib.rs"

[[bin]]
name = "tpx"
path = "src/main.rs"
