[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turboplex"
version = "0.2.0"
description = "High Performance Test Engine - Rust + Python"
requires-python = ">=3.10"
authors = [{name = "TurboTest Team"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
dependencies = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]

[project.scripts]
tpx = "turboplex_py.__main__:main"
turboplex = "turboplex_py.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["turboplex_py*"]
