[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "turboplex"
version = "0.3.2"
description = "High Performance Test Engine - Rust + Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{name = "Keita_Izumi"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
dependencies = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "mcp",
]

[tool.maturin]
bindings = "bin"
include = ["turboplex_py/**/*", "turboplex_py/mcp/**/*", "TURBOPLEX_GUIDE.md"]
python-packages = ["turboplex_py"]
