[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "turboplex"
version = "0.3.5"
description = "High Performance Test Engine - Rust + Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{name = "Keita_Izumi"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
dependencies = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "mcp",
]

[tool.maturin]
bindings = "bin"
include = [
    "turboplex_py/**/*",
    "turboplex_py/db/**/*",
    "turboplex_py/compat/**/*",
    "turboplex_py/mcp/**/*",
    "turboplex_py/runner/**/*",
    "turboplex_py/utils/**/*",
    "TURBOPLEX_GUIDE.md"
]
exclude = [
    "target/**/*",
    "target/**",
    ".tplex/**/*",
    ".benchmarks/**/*",
    ".turboplex_cache/**/*",
    ".venv*/**/*",
    "lib/**/*",
    "bin/**/*",
    "tests/**/*",
    "*.log",
    "*.tmp",
    "*.temp",
    "*.swp",
    "*.bak",
    "result*.json",
    "*_results.json",
    "failures_*.md",
    "analyze_*.py",
    "dist/**/*",
    "build/**/*",
    "*.egg-info/**/*",
    "__pycache__/**/*",
    ".pytest_cache/**/*",
    ".mypy_cache/**/*",
    ".ruff_cache/**/*",
    ".cache/**/*",
    "*.py[cod]"
]
python-packages = ["turboplex_py"]
